# more4cai

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  README.pt-BR.md  SECURITY.md  alembic.ini  pyproject.toml
.claude/: .gitignore  _check_refs.py  _validate.py  settings.json
.claude/agents/: adapter-author.md  findings-analyst.md  fix-bundle-author.md  security-auditor.md
.claude/commands/: backup.md  build.md  bundle.md  dashboard.md  db-shell.md  down.md  lint.md  logs.md  migrate.md  smoke.md  status.md  test.md  up.md
.claude/hooks/: format-python.py
.claude/rules/: api.md  docker.md  scanners.md  testing.md  triage.md
.claude/skills/cai-add-adapter/: SKILL.md
.claude/skills/cai-deploy/: SKILL.md
.claude/skills/cai-exposure/: SKILL.md
.claude/skills/cai-handoff-fix/: EXAMPLE_HANDOFF.md  SKILL.md
.claude/skills/cai-investigate/: SKILL.md
.claude/skills/cai-llm-debug/: SKILL.md
.claude/skills/cai-scan/: SKILL.md
.claude/skills/cai-self-heal/: SKILL.md
.claude/skills/cai-stack-status/: SKILL.md
.claude/skills/cai-triage/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/: exposure_targets.example.yml
docker/: compose.agent.yml  compose.greenbone.yml  compose.lab.yml  compose.observability.yml  compose.proxy.yml  compose.scanners.yml  compose.yml
docker/caddy/: Caddyfile
docker/images/cai-expert/: Dockerfile
docker/images/kali-toolbox/: Dockerfile
docker/images/orchestrator/: Dockerfile
docs/: architecture.md  runbook.md  threat-model.md  usage.md
orchestrator/: __init__.py  cli.py  config.py  main.py
orchestrator/adapters/: _cleanup.py  base.py  censys_adapter.py  checkov_adapter.py  dnstwist_adapter.py  github_exposure_adapter.py  gitleaks_adapter.py  greenbone_adapter.py  kube_bench_adapter.py  nmap_adapter.py  nuclei_adapter.py  shodan_adapter.py  subdomain_takeover_adapter.py  trivy_adapter.py  trufflehog_adapter.py  zap_adapter.py
orchestrator/ai/: analyzer.py  gateway.py  observability.py
orchestrator/ai/agentic/: cai_expert.py  tracing.py
orchestrator/ai/prompts/: system_pentester.md
orchestrator/api/: deps.py
orchestrator/api/routers/: auth.py  exposure.py  findings.py  health.py  investigate.py  reports.py  scans.py  targets.py  ui.py  users.py
orchestrator/audit/: __init__.py  logger.py
orchestrator/auth/: __init__.py  provisioning.py  session.py
orchestrator/domain/: dedup.py  roles.py  schemas.py  scrubber.py  target_validator.py
orchestrator/jobs/: exposure.py  pipelines.py  queue.py  workers.py
orchestrator/persistence/: db.py  models.py
orchestrator/persistence/migrations/: env.py
orchestrator/persistence/migrations/versions/: 0001_initial.py  0002_remove_compliance_fields.py  0003_add_current_phase.py  0004_restore_audit_compliance.py  (+2 more)
orchestrator/reporting/: compliance.py  renderer.py
orchestrator/reporting/exporters/: ai_bundle.py  defectdojo.py
orchestrator/reporting/templates/: executive.html.j2  report.html.j2
orchestrator/static/: app.js  cockpit.html  index.html  styles.css
scripts/: backup.sh  feed-sync.sh  ollama-bootstrap.sh  smoke.sh
tests/unit/: test_adapter_cleanup.py  test_auth_principal.py  test_authenticated_scanning.py  test_compliance.py  test_dedup.py  test_findings_queue.py  test_pipeline_scan_id.py  test_provisioning.py  test_rbac.py  test_scanner_selection.py  test_schemas.py  test_scrubber.py  test_session.py  test_target_validator.py
